[tool.poetry]
name = "quara-concurrency"
version = "0.1.0"
description = ""
authors = ["Guillaume Charbonnier <guillaume.charbonnier@araymond.com>"]
packages = [{ include = "quara" }]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
uvloop = "^0.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
